<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/search" />
        <item
            android:id="@+id/nav_upcoming"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/up_coming" />
        <item
            android:id="@+id/nav_nowplay"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/now_playing" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_collections_bookmark_black_24dp"
            android:title="@string/like_movie" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/setting" >
            <item
                android:id="@+id/sub_ing"
                android:title="English" />

            <item
                android:id="@+id/sub_ina"
                android:title="Indonesia" />
        </item>
    </group>
<!--
    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>-->

</menu>
